# Vigilant-X

./: .env.example  .gitignore  BENCHMARKS.md  Dockerfile  README.md  demo.ps1  demo.sh  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh  vigilant-results.sarif
.github/workflows/: vigilant_x.yml
benchmarks/mock_repo/: CWE457_Uninitialized_Variable_good.cpp
code_law/: default_rules.yaml
examples/: complex_vuln_v2.cpp  comprehensive_vuln.cpp  edge_cases.cpp  vigilant-results.sarif  vulnerable.py
examples/ComBSTRDemo/: ComBSTRDemo.sln  vigilant-results.sarif
examples/intentional_vulns/: command_injection.cpp  heap_overflow.cpp  use_after_free.cpp  vigilant-results.sarif
examples/vuln_sample/: vuln_sample.cpp
scripts/: bench_bigvul.py  bench_cvefixes.py  evaluate_benchmark.py  joern_export.sc
tests/: conftest.py  repro  repro2  test_backends.py  test_concolic_engine.py  test_cpg_builder_paths.py  test_fp_filter.py  test_language_prompts.py  test_likely_status.py  test_pr_summary_card.py  test_repro.cpp  test_sandbox_runner.py  test_sarif_writer.py  test_stable_repo_id.py  test_suppression.py  test_taint_tracker.py  test_z3_solver.py
vigilant/: __init__.py  cli.py  config.py  fp_filter.py  fp_safe_patterns.yaml  llm_client.py  llm_schemas.py  models.py  orchestrator.py  suppression.py  worker.py
vigilant/analysis/: __init__.py  concolic_engine.py  context_scorer.py  nitpick_engine.py  taint_tracker.py  taint_tracker.py_tmp
vigilant/communication/: __init__.py  pr_commenter.py  reviewer.py  sarif_writer.py
vigilant/ingestion/: __init__.py  backends.py  cpg_builder.py  framework_detector.py  intent_parser.py
vigilant/validation/: __init__.py  poc_generator.py  sandbox_runner.py  sandbox_runner_go.py  sandbox_runner_js.py  sandbox_runner_py.py
vigilant/webhook/: __init__.py  (+1 more)
(+3 files in other folders)
